--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Quantum Corona
+description: Targetting SARS-CoV-2 drugs with physics.
+github_username: quantumcorona
 
 # Email and twitter are optional:
-email:
-twitter_username:
+email: jarvist.frost@imperial.ac.uk
+twitter_username: JarvistFrost
 
 # Set this to true to get LaTeX math equation support
 use_math:
